@@ -3,6 +3,8 @@
 - Add filters to list action
 - Add prompt option to action link
 
+- Support show key in helpers for search date/datetime, to change default condition to render it hidden
+
 = 4.0.3
 - Fix for jQuery 3
 - Fix position popup for collection action links
